complex/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: stephengrider/multi-client
          ports:
            - containerPort: 3000

# kubectl get deployments
# kubectl delete deployment client-deployment
# kubectl get deployments

# kubectl delete service client-node-port
# kubectl apply -f k8s/client-deployment.yaml
# kubectl apply -f k8s
# kubectl get services
