complex/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000


#port ---> other pod that needs multi-client pod
#targetPort --> multi-client pod
#nodePort ---> outside access from browser

#Services: sets up networking in a kubernetes cluster
#1. ClusterIP: Exposes a set of pods to other objects in the cluster
#2. NodePort: Exposes a set of pods to the outside world(only good for dev purposes)
#3. LoadBalancer: Legacy way of getting network traffic into a cluster
#4. Ingress: Exposes a set of services to the outside world
